refactor: rename entity name